[package]
name = "rcue"
version = "0.1.0"
authors = ["Ng Guoyou <ng.guoyou@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/gyng/rcue"
documentation = "https://gyng.github.io/rcue"
description = "Simple CUE sheet reader"
categories = ["parsing"]
keywords = ["cue"]

[badges]
travis-ci = { repository = "gyng/rcue", branch = "master" }

[lib]
name = "rcue"
path = "src/lib.rs"
