[package]
name = "rcue"
version = "0.1.3"
authors = ["Ng Guoyou <ng.guoyou@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/gyng/rcue"
documentation = "https://docs.rs/rcue/latest/rcue/"
description = "Simple CUE sheet reader"
categories = ["parsing"]
keywords = ["cue"]

[lib]
name = "rcue"
path = "src/lib.rs"
